{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 48,
  "lineage": "c6f1d229-886f-d1ce-ff9f-37d300ed90ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_pub_ami",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08ffef921295fd55c",
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:instance/i-01fcfc2fbfa94bb24",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01fcfc2fbfa94bb24",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev_pub",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0623e7a13da3250a6",
            "private_dns": "ip-10-3-1-207.ap-northeast-2.compute.internal",
            "private_ip": "10.3.1.207",
            "public_ip": "54.180.131.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "volume_id": "vol-0a915531601aabc5e",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c893dc07d6161324",
            "tags": {
              "Name": "dev_pub_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-082e03cfb812acbd7"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_pub_sg",
            "aws_subnet.dev_subnet_pub1",
            "aws_vpc.dev-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:internet-gateway/igw-0acc673cf20ee8868",
            "id": "igw-0acc673cf20ee8868",
            "owner_id": "494307375889",
            "tags": {
              "Name": "terraform-dev-gw"
            },
            "vpc_id": "vpc-0f967333762df5a02"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ccfec6d2e0bfcf17",
            "owner_id": "494307375889",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0acc673cf20ee8868",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0f967333762df5a02"
          },
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb352b7917058cbe",
            "route_table_id": "rtb-0ccfec6d2e0bfcf17",
            "subnet_id": "subnet-0c893dc07d6161324"
          },
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_route_table.dev-pub-rt",
            "aws_subnet.dev_subnet_pub1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:security-group/sg-082e03cfb812acbd7",
            "description": "Security group for all worker nodes in pub 1 sbnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.3.2.0/24",
                  "10.3.3.0/24"
                ],
                "description": "",
                "from_port": 3308,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3308
              }
            ],
            "id": "sg-082e03cfb812acbd7",
            "ingress": [
              {
                "cidr_blocks": [
                  "183.101.41.227/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "183.101.41.227/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "183.101.41.227/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_dev_pub_sg",
            "name_prefix": null,
            "owner_id": "494307375889",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-dev-pub-node"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f967333762df5a02"
          },
          "dependencies": [
            "aws_vpc.dev-vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-db-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:subnet/subnet-09bd245b16a2e0877",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.3.2.0/24",
            "id": "subnet-09bd245b16a2e0877",
            "map_public_ip_on_launch": false,
            "owner_id": "494307375889",
            "tags": {
              "Name": "terraform-dev-db-subnet-1"
            },
            "vpc_id": "vpc-0f967333762df5a02"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-db-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:subnet/subnet-092c2e38e8bb2b346",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.3.3.0/24",
            "id": "subnet-092c2e38e8bb2b346",
            "map_public_ip_on_launch": false,
            "owner_id": "494307375889",
            "tags": {
              "Name": "terraform-dev-db-subnet-2"
            },
            "vpc_id": "vpc-0f967333762df5a02"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_subnet_pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:subnet/subnet-0c893dc07d6161324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.3.1.0/24",
            "id": "subnet-0c893dc07d6161324",
            "map_public_ip_on_launch": true,
            "owner_id": "494307375889",
            "tags": {
              "Name": "dev_subnet_pub"
            },
            "vpc_id": "vpc-0f967333762df5a02"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:494307375889:vpc/vpc-0f967333762df5a02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-08b6b0b78f1490ae6",
            "default_route_table_id": "rtb-04277e4bc3e3aa6e8",
            "default_security_group_id": "sg-08704f4b809c93f47",
            "dhcp_options_id": "dopt-d59c24be",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f967333762df5a02",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04277e4bc3e3aa6e8",
            "owner_id": "494307375889",
            "tags": {
              "Name": "terraform-dev-node"
            }
          }
        }
      ]
    }
  ]
}